# Maritime_Domain_Awareness

./: README.md  kalman
maritime_domain_awareness/: .gitignore  LICENSE  README.md  job.sh  notebook.ipynb  pyproject.toml  requirements.txt  tasks.py
maritime_domain_awareness/.devcontainer/: devcontainer.json
maritime_domain_awareness/data/preprocessed/done4/: normalization_params.json
maritime_domain_awareness/dockerfiles/: api.dockerfile  train.dockerfile
maritime_domain_awareness/docs/: mkdocs.yaml
maritime_domain_awareness/docs/source/: index.md
maritime_domain_awareness/models/: ais_Transformer_model.pth  ais_gru_model.pth  ais_lstm_model.pth  ais_rnn_model.pth  ais_transformer_model.pth
maritime_domain_awareness/src/maritime_domain_awareness/: CompareModels.py  KalmanFilterWrapper.py  KalmanTrajectoryPrediction.py  PlotToWorldMap.py  RNN_models.py  Sampling.py  Transformer_model.py  compare.py  data.py  data_temp.py  evaluate.py  preproccesing.py  temp.py  tempCodeRunnerFile.py  train.py  visualize.py
maritime_domain_awareness/src/maritime_domain_awareness/BaselineModel/: KalmanFilter.py  Predict.py  ProcessData.py  evaluate.py  mainBaseline.py  validate.py
maritime_domain_awareness/src/maritime_domain_awareness/done42/: normalization_params.json
maritime_domain_awareness/src/maritime_domain_awareness/models/: KalmanFilter.py  Load_model.py  RNN_models.py  Transformer_model.py  XLSTM_model.py  ais_Transformer_model.pth  mamba_model.py
maritime_domain_awareness/tests/: test_data.py
(+481 files in other folders)
