[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "maritime_domain_awareness"
version = "0.0.1"
description = "Deep learning project focused on increasing maritime domain awareness using spatio-temporal AIS data. The project involves building sequential models (e.g., RNNs or Transformers) for tasks such as trajectory prediction, anomaly detection, or port call prediction based on real-world vessel movement data."
authors = [
  { name = "Group 1: Victor Skaarup Justesen, Niklas August Kj\u00f8lbro, Simon Rostad Olsen, Anders Greve S\u00f8rensen", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W", ]

[tool.coverage.run]
omit = ["tests/*"]
